Add Google Analytics first link to youtube Carol's Events homepage and adding target blank to link

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="fr" class="scroll-smooth">
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YSKZH25DPQ"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-YSKZH25DPQ');
+	</script>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -16,10 +25,11 @@
         <nav class="-z-10 relative lg:max-w-[1260px] py-6 px-[26px] xl:px-0 xl:mx-auto w-full flex items-center justify-between">
             <h2 class="pb-px hover:scale-105 transition-all duration-300"><a href="/">Carole Formisano</a></h2>
             <ul class="flex gap-4">
-                <li><a href="https://www.instagram.com/carols.events/"><i class="fa-brands fa-instagram hover:scale-105 transition-all duration-300"></i></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=61565220964593"><i class="fa-brands fa-facebook hover:scale-105 transition-all duration-300"></i></a></li>
-                <li><a href="mailto:caroleforsinger@gmail.com"><i class="fa-regular fa-envelope hover:scale-105 transition-all duration-300"></i></a></li>
-                <li><a href="tel:+33611881686"><i class="fa-brands fa-whatsapp hover:scale-105 transition-all duration-300"></i></a></li>
+				<li><a href="https://www.youtube.com/channel/UCLlnYFedjqcThkBeEzHv-Lg" target="_blank"><i class="fa-brands fa-youtube hover:scale-105 transition-all duration-300"></i></a></li>
+                <li><a href="https://www.instagram.com/carols.events/" target="_blank"><i class="fa-brands fa-instagram hover:scale-105 transition-all duration-300"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=61565220964593" target="_blank"><i class="fa-brands fa-facebook hover:scale-105 transition-all duration-300"></i></a></li>
+                <li><a href="mailto:caroleforsinger@gmail.com" target="_blank"><i class="fa-regular fa-envelope hover:scale-105 transition-all duration-300"></i></a></li>
+                <li><a href="tel:+33611881686" target="_blank"><i class="fa-brands fa-whatsapp hover:scale-105 transition-all duration-300"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -118,10 +128,11 @@
     </main>
     <footer class="z-10 py-4 bg-indigo-950 relative flex flex-col items-center justify-center">
         <ul class="flex gap-8 text-white items-center text-lg md:text-xl lg:text-2xl">
-            <li><a href="https://www.instagram.com/carols.events/"><i class="fa-brands fa-instagram hover:scale-105 transition-all duration-300"></i></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=61565220964593"><i class="fa-brands fa-facebook hover:scale-105 transition-all duration-300"></i></a></li>
-            <li><a href="mailto:caroleforsinger@gmail.com"><i class="fa-regular fa-envelope hover:scale-105 transition-all duration-300"></i></a></li>
-            <li><a href="tel:+33611881686"><i class="fa-brands fa-whatsapp hover:scale-105 transition-all duration-300"></i></a></li>
+			<li><a href="https://www.youtube.com/channel/UCLlnYFedjqcThkBeEzHv-Lg" target="_blank"><i class="fa-brands fa-youtube hover:scale-105 transition-all duration-300"></i></a></li>
+            <li><a href="https://www.instagram.com/carols.events/" target="_blank"><i class="fa-brands fa-instagram hover:scale-105 transition-all duration-300"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=61565220964593" target="_blank"><i class="fa-brands fa-facebook hover:scale-105 transition-all duration-300"></i></a></li>
+            <li><a href="mailto:caroleforsinger@gmail.com" target="_blank"><i class="fa-regular fa-envelope hover:scale-105 transition-all duration-300"></i></a></li>
+            <li><a href="tel:+33611881686" target="_blank"><i class="fa-brands fa-whatsapp hover:scale-105 transition-all duration-300"></i></a></li>
         </ul>
         <p class="text-gray-500 w-full p-4">
             © 2024 Copyright <span class="text-white">Carole Formisano</span>. Tous droits réservés.
