--- a/www/index.html
+++ b/www/index.html
@@ -233,7 +233,7 @@
         <section id="about" class="relative flex flex-col w-full lg:max-w-[1260px] items-between lg:justify-end px-4 mx-auto pt-[50px] pb-[50px] overflow-x-hidden">
             <div class="w-full lg:max-w-[720px] lg:items-start lg:mb-[120px]">
                 <h2 data-aos-duration="1200" data-aos="fade-left" class="self-start mb-10 text-3xl text-indigo-950 md:text-[50px] leading-[48px] lg:leading-[75px] font-outfit font-semibold">
-                    À propos de moi
+                    Qui suis-je ?
                 </h2>
                 <h5 data-aos="fade-left" data-aos-duration="3000" class="text-indigo-800 text-2xl md:text-2xl mb-10 px-4 font-light italic">
                     «Notre voix est le reflet de notre être et de nos émotions.»
